--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Adds the SVGS -->
+    <script src="js/svgembedder.js"></script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -50,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Plone 5 Release Party</a>
+                <a class="navbar-brand" href="#page-top">Plone 5</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -63,7 +66,7 @@
                         <a href="#portfolio">Plone 5</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">The Event</a>
+                        <a href="#about">The Release Party</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Register!</a>
@@ -80,11 +83,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <svg class="icon icon-html52"><use xlink:href="#icon-html52"></use></svg>
                     <img class="img-responsive" src="img/plone-icon-256.png" alt="">
+
+
                     <div class="intro-text">
-                        <span class="name">Plone 5 Release Party</span>
+                        <span class="name">Plone 5 Release</span>
                         <hr class="star-light">
-                        <span class="skills">Party & Sprint - September 16 - kitchen2soul, München Neuhausen </span>
+                        <span class="skills">The new Plone Version ... TODO</span>
                     </div>
                 </div>
             </div>
@@ -101,6 +107,42 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <p>New Theme</p>
+                        <svg class="icon icon-checkmark"><use xlink:href="#icon-checkmark"></use></svg>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <p>New Javascript Story</p>
+                        <svg class="icon icon-js"><use xlink:href="#icon-js"></use></svg>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <p>30 % Faster</p>
+                    <svg class="icon icon-rocket"><use xlink:href="#icon-rocket"></use></svg>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <p>Codebase Cleaned</p>
+                    <svg class="icon icon-bin"><use xlink:href="#icon-bin"></use></svg>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <p>Already used in Production</p>
+                    <svg class="icon icon-clipboard"><use xlink:href="#icon-clipboard"></use></svg>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="http://demo.plone.de/" class="portfolio-link" data-toggle="modal">
+                      <p>DEMO</p>
+                      <svg class="icon icon-cogs"><use xlink:href="#icon-cogs"></use></svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Screenshots</h2>
+                    <hr class="star-primary">
+
+
+
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -131,35 +173,8 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
+
+
                 </div>
             </div>
         </div>
@@ -170,33 +185,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>The Event</h2>
+                    <h2>The Release Party</h2>
+                    <h3>16 September 2015</h3>
                     <hr class="star-light">
+                    <p>Part of the Plone Core team are in Munich and for the upcoming release of Plone 5
+                        we’re organizing a Release Party with presentaions and beers afterwards.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-2">
                     <h3>Programm</h3>
-                    <p>Progarmm: 1. Empfang 2. Präsentation 3. Open-End. </p>
+                    <ul>
+                        <li>18:00 - Empfang</li>
+                        <li>19:00 - Kurze Präsentation zu Plone 5</li>
+                        <li>19:30 - Show me Plone 5 (Hands on Plone5)</li>
+                        <li>Open End - We visit the irish pub or a pizzeria nearby.</li>
+                    </ul>
                 </div>
 
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Location</h3>
-                    <p>Wir treffen uns im wunderbaren kitchen2soul und stellen Plone 5 vor.</p>
-                     <img src="img/logo.png" class="img-responsive" alt="">
+                    <a href="http://www.kitchen2soul.de/">
+                        <img src="img/logo_kitchen.png" class="img-responsive" alt="">
+                    </a>
+                    <address>
+                        <a href="http://www.kitchen2soul.de/">kitchen2soul</a><br>
+                        Schlörstraße 4<br>
+                        80634 München-Neuhausen
+                    </address>
+                    <h4>Zu erreichen:</h4>
+                    <div>Zwischen Donnersbergerbrücke (S-Bahn und Tram) und Rotkreuzplatz (Bus, Tram, U-Bahn).</div>
+                    <div>Bushaltestelle Schlörstraße Bus 53, 63</div>
+                    <div>Nächstgelegenes Parkhaus:</div>
+                    <div>Parkhaus der Galeria Kaufhof am Rotkreuzplatz.</div>
                 </div>
 
                 <div class="col-lg-6 col-lg-offset-2">
                     <h3>Sprint</h3>
-                    <p>Die Release Party ist das Kick-Off Event zum Plone5 Themeing Sprint an der LMU München </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Register
-                    </a>
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Register on Meetup.com
-                    </a>
+                    <p>Die Release Party ist das Kick-Off Event zum Plone5 Themeing Sprint.</p>
+                    <p>Vom 16 - 20 September treffen sich Entwickler an der LMU München.</p>
+                    <a href="http://www.coactivate.org/projects/plone-5-theming-sprint-munich/project-home"><h4>Mehr Infos zum Sprint</h4></a>
                 </div>
             </div>
         </div>
@@ -209,13 +237,14 @@
                 <div class="col-lg-12 text-center">
                     <h2>Register</h2>
                     <hr class="star-primary">
+                    <p>Damit wir abschätzen können wieviel leute kommen, bitten wir um eine Registrierung:</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate method="post" action="mail/contact_me.php">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -255,19 +284,17 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3>Impressum</h3>
-                    <p>Plone 5<br/>Musterstraße 1<br/>12345 Musterstadt</p>
+                    <p>Python Software Verband e.V. <br>
+                       Forsterstraße 29 <br>
+                       06112 Halle (Saale)<br>
                 </div>
                 <div class="col-lg-3">
                     <h3>Inhalt</h3>
-                    <p>Inhaltlich Verantwortlicher gemäß § 6 MDStV: Max Mustermann</p>
+                    <p>Inhaltlich Verantwortlicher gemäß § 6 MDStV: Python Software Verband e.V.</p>
                 </div>
                 <div class="col-lg-3">
                     <h3>E-Mail</h3>
                     <p>info@plone.de</p>
-                </div>
-                <div class="col-lg-3">
-                    <h3>Telefon</h3>
-                    <p>+49 8071 5272533-0</p>
                 </div>
             </div>
         </div>
@@ -316,31 +343,24 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>kitchen2soul</p>
+                        <p>Schlörstraße 4</p>
+                        <p>80634 München-Neuhausen</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="http://www.facebook.com/pages/Plonede/141710805879238" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="http://www.plone.de/mitmachen/folge-uns-bei-twitter" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Plone 5 Release Party</a>.</p>
+                        <h3>About Plone</h3>
+                        <p>Plone is a free and open source content management system</p>
                     </div>
                 </div>
             </div>
@@ -349,7 +369,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; plone5.de 2015
                     </div>
                 </div>
             </div>
