--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <svg class="icon icon-html52"><use xlink:href="#icon-html52"></use></svg>
-                    <img class="img-responsive" src="img/plone-icon-256.png" alt="">
+                    <div id="logos">
+                        <svg class="icon icon-html52"><use xlink:href="#icon-html52"></use></svg>
+                        <img class="img-responsive" src="img/plone_logo.png" alt="">
+                    </div>
 
 
                     <div class="intro-text">
