--- a/index.html
+++ b/index.html
@@ -109,40 +109,48 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <p>New Theme</p>
-                        <svg class="icon icon-checkmark"><use xlink:href="#icon-checkmark"></use></svg>
+                <div class="col-sm-4 portfolio-item text-center">
+                    <svg class="icon icon-checkmark"><use xlink:href="#icon-checkmark"></use></svg>
+                    <h4>Neues Theme</h4>
+                    <p>Barceloneta, das neue Standard Theme: HTML5, CSS3 und Responsive</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <p>New Javascript Story</p>
-                        <svg class="icon icon-js"><use xlink:href="#icon-js"></use></svg>
+                    <div class="col-sm-4 portfolio-item text-center">
+                    <svg class="icon icon-js"><use xlink:href="#icon-js"></use></svg>
+                     <h4>Javascript</h4>
+                    <p>Gründliche Überarbeitung von Javascript Support: LESS, RequireJS, Patternslib</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <p>30 % Faster</p>
+                    <div class="col-sm-4 portfolio-item text-center">
                     <svg class="icon icon-rocket"><use xlink:href="#icon-rocket"></use></svg>
+                    <h4>30 % Faster</h4>
+                    <p>Chameleon Templates - Schneller, leichter zu schreiben und 100% kompatibel</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <p>Codebase Cleaned</p>
+                    <div class="col-sm-4 portfolio-item text-center">
                     <svg class="icon icon-bin"><use xlink:href="#icon-bin"></use></svg>
+                    <h4>Aufgeräumte Codebase</h4>
+                    <p>Altlasten entfernt, verbesserte Code Lesbarkeit in viele Core Modulen</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <p>Already used in Production</p>
+                <div class="col-sm-4 portfolio-item text-center">
                     <svg class="icon icon-clipboard"><use xlink:href="#icon-clipboard"></use></svg>
+                    <h4>Wird schon in Produktion genutzt</h4>
+                    <p>Neue Projekte sollten schon zu Plone 5 greifen!</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item text-center">
                     <a href="http://demo.plone.de/" class="portfolio-link" data-toggle="modal">
-                      <p>DEMO</p>
                       <svg class="icon icon-cogs"><use xlink:href="#icon-cogs"></use></svg>
+                      <h4>Demo</h4>
+                      <p>Teste Plone - Die aktuelle Version!</p>
                     </a>
                 </div>
             </div>
         </div>
+
+        <!-- Add later
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Screenshots</h2>
                     <hr class="star-primary">
-
+                </div>
 
 
                 <div class="col-sm-4 portfolio-item">
@@ -175,7 +183,7 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
-
+-->
 
                 </div>
             </div>
