More fine stuff

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                         <a href="#portfolio">Plone 5</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">The Release Party</a>
+                        <a href="#about">Die Release Party</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Register!</a>
+                        <a href="#contact">Anmelden!</a>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Plone 5</h2>
+                    <h2>Was ist neu?</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -310,7 +310,7 @@
         </div>
     </section>
 
-    <!-- Data Privacy Statement Section -->
+    <!-- Data Privacy Statement Section
     <section id="data-privacy-statement">
         <div class="container">
             <div class="row">
@@ -344,7 +344,7 @@
             </div>
         </div>
     </section>
-
+-->
 
     <!-- Footer -->
     <footer class="text-center">
