Add button styling

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <div class="col-sm-4 portfolio-item text-center">
                     <a href="http://demo.plone.de/" class="portfolio-link" data-toggle="modal">
                       <svg class="icon icon-cogs"><use xlink:href="#icon-cogs"></use></svg>
-                      <h4>Demo</h4>
-                      <p>Teste Plone - Die aktuelle Version!</p>
+                      <h4>Demo Seite</h4>
+                      <p>Teste Plone Version 5 - aktuelle Version, ohne Installation</p>
                     </a>
                 </div>
             </div>
@@ -292,17 +292,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <h3>Impressum</h3>
                     <p>Python Software Verband e.V. <br>
                        Forsterstraße 29 <br>
                        06112 Halle (Saale)<br>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <h3>Inhalt</h3>
                     <p>Inhaltlich Verantwortlicher gemäß § 6 MDStV: Python Software Verband e.V.</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <h3>E-Mail</h3>
                     <p>info@plone.de</p>
                 </div>
