--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Location</h3>
                     <a href="http://www.kitchen2soul.de/">
-                        <img src="img/logo_kitchen.png" class="img-responsive" alt="">
+                        <img src="img/logo_kitchen.jpg" class="img-responsive" alt="">
                     </a>
                     <address>
                         <a href="http://www.kitchen2soul.de/">kitchen2soul</a><br>
