--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; plone5.de 2015
+                        Copyright &copy; plone5.de 201<a style="color:#FFF" href="http://pad.webmontag.ws/p/plone">5</a>
                     </div>
                 </div>
             </div>
