improve text and structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:type" content="website" /> 
-    <meta property="og:url" content="http://plone5.de" /> 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://plone5.de" />
     <meta property="og:title" content="Plone 5" />
-    <meta property="og:description" content="Plone 5 Release" /> 
+    <meta property="og:description" content="Plone 5 Release" />
     <meta property="og:image" content="http://plone5.de/images/image-src-default.png" />
 
     <title>Plone 5</title>
@@ -90,9 +90,10 @@
 
 
                     <div class="intro-text">
-                        <span class="name">Plone 5 Release</span>
+                        <span class="name">Plone 5</span>
                         <hr class="star-light">
-                        <span class="skills">The new Plone Version ... TODO</span>
+                        <span class="skills">Das ultimative Open Source Enterprise CMS</span>
+
                     </div>
                 </div>
             </div>
@@ -141,6 +142,12 @@
                       <p>Teste Plone Version 5 - aktuelle Version, ohne Installation</p>
                     </a>
                 </div>
+                <!--div class="col-sm-4 col-sm-offset-4 text-center">
+                    <a href="https://plone.com/features/" class="portfolio-link" data-toggle="modal">
+                      <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                      <h4>... und viele weitere neue Features</h4>
+                    </a>
+                </div-->
             </div>
         </div>
 
@@ -195,28 +202,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>The Release Party</h2>
+                    <h2>Die Release Party</h2>
                     <h3>16 September 2015</h3>
                     <hr class="star-light">
-                    <p>Part of the Plone Core team are in Munich and for the upcoming release of Plone 5
-                        we’re organizing a Release Party with presentaions and beers afterwards.</p>
+                    <p>Plone-Entwicklerinnen und Entwickler treffen sich in München um den Release von Plone 5.0 zu feiern.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-2">
-                    <h3>Programm</h3>
-                    <ul>
-                        <li>18:00 - Empfang</li>
-                        <li>19:00 - Kurze Präsentation zu Plone 5</li>
-                        <li>19:30 - Show me Plone 5 (Hands on Plone5)</li>
-                        <li>Open End - We visit the irish pub or a pizzeria nearby.</li>
-                    </ul>
-                </div>
 
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3>Location</h3>
                     <a href="http://www.kitchen2soul.de/">
-                        <img src="img/logo_kitchen.jpg" class="img-responsive" alt="">
+                        <img src="img/logo_kitchen.jpg" class="img-responsive center-block" alt="">
                     </a>
                     <address>
                         <a href="http://www.kitchen2soul.de/">kitchen2soul</a><br>
@@ -230,10 +227,22 @@
                     <div>Parkhaus der Galeria Kaufhof am Rotkreuzplatz.</div>
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-2">
+
+                <div class="col-lg-4 col-lg-offset-2">
+                    <h3>Programm</h3>
+                    <ul>
+                        <li>18:00 - Empfang</li>
+                        <li>19:00 - Kurze Präsentation zu Plone 5</li>
+                        <li>19:30 - Show me Plone 5 (Hands on)</li>
+                        <li>Party - Open End</li>
+                    </ul>
+                </div>
+
+
+                <div class="col-lg-4 col-lg-offset-1">
                     <h3>Sprint</h3>
-                    <p>Die Release Party ist das Kick-Off Event zum Plone5 Themeing Sprint.</p>
-                    <p>Vom 16 - 20 September treffen sich Entwickler an der LMU München.</p>
+                    <p>Die Release Party ist das Kick-Off Event zum Plone5 Theming Sprint.</p>
+                    <p>Vom 16 - 20 September treffen sich Entwickler an der Universität München.</p>
                     <a href="http://www.coactivate.org/projects/plone-5-theming-sprint-munich/project-home"><h4>Mehr Infos zum Sprint</h4></a>
                 </div>
             </div>
@@ -245,9 +254,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Register</h2>
+                    <h2>Anmelden</h2>
                     <hr class="star-primary">
-                    <p>Damit wir abschätzen können wieviel leute kommen, bitten wir um eine Registrierung:</p>
+                    <p>Damit wir abschätzen können wieviele Leute kommen, bitten wir um eine Registrierung:</p>
                 </div>
             </div>
             <div class="row">
