--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
                         <img src="img/logo_kitchen.jpg" class="img-responsive center-block" alt="">
                     </a>
                     <address>
-                        <a href="http://www.kitchen2soul.de/">kitchen2soul</a><br>
                         Schlörstraße 4<br>
                         80634 München-Neuhausen
                     </address>
@@ -231,10 +230,10 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Programm</h3>
                     <ul>
-                        <li>18:00 - Empfang</li>
-                        <li>19:00 - Kurze Präsentation zu Plone 5</li>
-                        <li>19:30 - Show me Plone 5 (Hands on)</li>
-                        <li>Party - Open End</li>
+                        <li><p>18:00 - Empfang</p></li>
+                        <li><p>19:00 - Präsentation zu Plone 5</p></li>
+                        <li><p>19:30 - Show me Plone 5 (Hands on)</p></li>
+                        <li><p>Party - Open End</p></li>
                     </ul>
                 </div>
 
