Update logo / text

--- a/index.html
+++ b/index.html
@@ -84,13 +84,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div id="logos">
-                        <svg class="icon icon-html52"><use xlink:href="#icon-html52"></use></svg>
-                        <img class="img-responsive" src="img/plone_logo.png" alt="">
+                        <img class="img-responsive" src="img/plone5_logo.png" alt="">
                     </div>
 
 
                     <div class="intro-text">
-                        <span class="name">Plone 5</span>
                         <hr class="star-light">
                         <span class="skills">Das ultimative Open Source Enterprise CMS</span>
 
@@ -208,6 +206,8 @@
                     <p>Plone-Entwicklerinnen und Entwickler treffen sich in München um den Release von Plone 5.0 zu feiern.</p>
                 </div>
             </div>
+
+            <br>
             <div class="row">
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -225,26 +225,36 @@
                     <div>Nächstgelegenes Parkhaus:</div>
                     <div>Parkhaus der Galeria Kaufhof am Rotkreuzplatz.</div>
                 </div>
+            </div>
 
-
-                <div class="col-lg-4 col-lg-offset-2">
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3>Programm</h3>
+                    <div class="col-lg-8 col-lg-offset-2 text-left">
                     <ul>
-                        <li><p>18:00 - Empfang</p></li>
-                        <li><p>19:00 - Präsentation zu Plone 5</p></li>
+                        <li><p>18:00 - Empfang (Für Essen & Trinken ist gesorgt)</p></li>
+                        <li><p>19:00 Vorstellung von Plone 5 durch den Release Manager - Eric Steele</p></li>
                         <li><p>19:30 - Show me Plone 5 (Hands on)</p></li>
                         <li><p>Party - Open End</p></li>
                     </ul>
+                    </div>
                 </div>
+            </div>
+            <div class="row">
 
 
-                <div class="col-lg-4 col-lg-offset-1">
+                <br>
+                <br>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3>Sprint</h3>
                     <p>Die Release Party ist das Kick-Off Event zum Plone5 Theming Sprint.</p>
-                    <p>Vom 16 - 20 September treffen sich Entwickler an der Universität München.</p>
+                    <p>Vom 16 - 20 September treffen sich Entwickler an der Universität München. Jeder Interessierte kann kostenfrei teilnehmen.</p>
                     <a href="http://www.coactivate.org/projects/plone-5-theming-sprint-munich/project-home"><h4>Mehr Infos zum Sprint</h4></a>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -285,6 +295,45 @@
                             </div>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Imprint Section -->
+    <section class="success" id="imprint">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Sponsoren</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 portfolio-item text-center">
+                    <h4><a href="http://python-verband.org/">PySV.org</a></h4>
+                    <a href="http://python-verband.org/">
+                      <img src="img/pysv_sponsor.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item text-center">
+                    <h4><a href="http://www.starzel.de/">Starzel.de</a></h4>
+                    <a href="http://www.starzel.de/">
+                      <img src="img/starzel_sponsor.png" style="background: white" class="img-responsive img-centered" alt="">
+                    </a>
+
+                </div>
+                <div class="col-sm-3 portfolio-item text-center">
+                    <h4><a href="https://www.syslab.com/">Syslab.com</a></h4>
+                     <a href="https://www.syslab.com/">
+                      <img src="img/syslab.svg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item text-center">
+                    <h4><a href="http://www.operun.de/">Operun.de</a></h4>
+                     <a href="http://www.operun.de/">
+                      <img src="img/operun_sponsor.png" class="img-responsive img-centered" alt="">
+                    </a>
                 </div>
             </div>
         </div>
