--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 col-sm-offset-1 portfolio-item text-center">
+                <div class="col-sm-3 col-sm-offset-3 portfolio-item text-center">
                     <h4><a href="http://python-verband.org/">PySV.org</a></h4>
                     <a href="http://python-verband.org/">
                       <img src="img/pysv_sponsor.png" class="img-responsive img-centered" alt="">
@@ -323,24 +323,32 @@
                     </a>
 
                 </div>
-                <div class="col-sm-3 portfolio-item text-center">
+            </div>
+            <div class="row push-3">
+                <div class="col-sm-3 col-sm-offset-3 portfolio-item text-center">
                     <h4><a href="https://www.syslab.com/">Syslab.com</a></h4>
                      <a href="https://www.syslab.com/">
                       <img src="img/syslab.svg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-            </div>
-            <div class="row push-3">
-                <div class="col-sm-3 col-sm-offset-3 portfolio-item text-center">
+                <div class="col-sm-3 portfolio-item text-center">
                     <h4><a href="http://www.operun.de/">Operun.de</a></h4>
                      <a href="http://www.operun.de/">
                       <img src="img/operun_sponsor.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-sm-3 portfolio-item text-center">
+            </div>
+            <div class="row push-3">
+                <div class="col-sm-3 col-sm-offset-3 portfolio-item text-center">
                     <h4><a href="http://www.derico.de/">Derico</a></h4>
                      <a href="http://www.derico.de/">
                       <img src="img/derico_sponsor.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item text-center">
+                    <h4><a href="http://www.kitconcept.com/">kitconcept.com</a></h4>
+                     <a href="http://www.kitconcept.com/">
+                      <img src="img/kitconcept_sponsor.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
